Making paragraphs wrap-around to ensure PDF docs dont get cutout

--- a/doc/etc/dstools_extra.css
+++ b/doc/etc/dstools_extra.css
@@ -49,7 +49,7 @@ pre.example {
         padding: 4px 6px;
         margin: 4px 8px 4px 2px;
         overflow: auto;
-        word-wrap: normal;
+        word-wrap: break-word;
         font-size:  9pt;
         line-height: 125%;
         font-family: monospace, fixed;
@@ -62,7 +62,7 @@ pre.result {
         padding: 4px 6px;
         margin: 4px 8px 4px 2px;
         overflow: auto;
-        word-wrap: normal;
+        word-wrap: break-word;
         font-size:  9pt;
         line-height: 125%;
         font-family: monospace, fixed;
